fix order restaurant header + date spacing

--- a/public/css/order.css
+++ b/public/css/order.css
@@ -49,7 +49,7 @@
 }
 
 .panel-order-details .date-created {
-  font-size: 13px;
+  font-size: 12px;
   font-weight: 300;
   color: #918580;
 }
